Remove dev_key code paths
[#140636909] Users should not be able to provide dev_key for encryption

Signed-off-by: Joe Kirwin <jkirwin@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,9 +10,8 @@ auth_server:
 encryption:
   provider: internal
   keys:
-  - dev_key: D673ACD01DA091B08144FBC8C0B5F524
+  - encryption_password: opensesame
     active: true
-  - dev_key: A673ACF01DB091B08133FBC8C0B5F555
   - encryption_password: correcthorsebatterystaple
 security:
   oauth2:
