BETA_VERSION -> VERSION
[#146020289] App version should be accurate in CEF logs

--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ apply plugin: "jacoco"
 
 jar {
     baseName = "credhub"
-    if (System.getenv("BETA_VERSION")) {
+    if (System.getenv("VERSION")) {
         def versionFile = new File("$projectDir/src/main/resources/version")
-        versionFile.write(System.getenv("BETA_VERSION"))
+        versionFile.write(System.getenv("VERSION"))
     }
 }
 sourceCompatibility = 1.8
