Add TLSv1.2 default to application-dev.yml
[#145899485] CredHub should only support TLS 1.2 connections

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -43,3 +43,4 @@ server:
     trust_store: src/test/resources/trust_store.jks
     trust_store_password: changeit
     trust_store_type: JKS
+    enabled-protocols: TLSv1.2
