Move canary creation flag
application.yml -> application-dev.yml

[#140791811] Encryption key canaries should only be created by one server when deploying multiple instances

Signed-off-by: Kelly Gerritz <kgerritz@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,6 +9,8 @@ encryption:
   - encryption_password: opensesame
     active: true
   - encryption_password: correcthorsebatterystaple
+  key_creation_enabled: true
+  
 security:
   oauth2:
     resource:
