--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -7,6 +7,7 @@ encryption:
   - encryption_password: opensesame
     active: true
   - encryption_password: correcthorsebatterystaple
+  key_creation_enabled: true
 
 security:
   basic:
