--- a/build.gradle
+++ b/build.gradle
@@ -118,5 +118,6 @@ test {
     }
 
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-h2")
+    systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
     outputs.upToDateWhen { false }
 }
