Limit number of concurrent JDBC connections in tests
[Finishes #150244995] Reduce number of concurrent JDBC connections in tests

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -33,6 +33,10 @@ spring:
   jpa:
     hibernate:
       ddl_auto: validate
+  datasource:
+    tomcat:
+      max-active: 4
+      max-idle: 0
 
 logging:
   level:
