--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -37,6 +37,8 @@ spring:
     tomcat:
       max-active: 4
       max-idle: 0
+      min-idle: 0
+      min-evictable-idle-time-millis: 500
 
 logging:
   level:
