--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ jacocoTestReport {
 bootRun {
     addResources = true
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev-h2")
+    systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
 }
 
 task cleanAndAssemble(dependsOn: ['clean', 'assemble'])
