--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,19 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
-        classpath("org.owasp:dependency-check-gradle:1.3.6")
+        classpath("org.owasp:dependency-check-gradle:3.0.2")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
     }
+}
+
+plugins {
+    id 'com.github.ben-manes.versions' version '0.17.0'
 }
 
 apply plugin: "java"
 apply plugin: "idea"
 apply plugin: "org.springframework.boot"
 apply plugin: "org.owasp.dependencycheck"
-apply plugin: "jacoco"
 
 jar {
     baseName = "credhub"
@@ -50,45 +53,25 @@ dependencies {
     }
 
     compile("org.springframework.boot:spring-boot-starter-log4j2")
-    compile("org.passay:passay:1.1.0")
-    compile("com.h2database:h2:1.4.192")
-    compile("com.jayway.jsonpath:json-path:2.2.0")
+    compile("org.passay:passay:1.3.0")
+    compile("com.h2database:h2:1.4.196")
+    compile("com.jayway.jsonpath:json-path:2.4.0")
     compile("org.bouncycastle:bcpkix-jdk15on:1.58")
-    compile("com.google.guava:guava:19.0")
-    compile("org.apache.commons:commons-lang3:3.4")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.5")
-    compile("org.postgresql:postgresql:9.3-1100-jdbc4")
-    compile("org.mariadb.jdbc:mariadb-java-client:1.5.8")
-    compile("org.flywaydb:flyway-core:4.0.3")
-    compile("net.java.dev.jna:jna:4.2.2")
+    compile("com.google.guava:guava:23.4-jre")
+    compile("org.apache.commons:commons-lang3:3.7")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.2")
+    compile("org.postgresql:postgresql:42.1.4")
+    compile("org.mariadb.jdbc:mariadb-java-client:2.2.0")
+    compile("org.flywaydb:flyway-core:4.2.0")
+    compile("net.java.dev.jna:jna:4.5.0")
     compile("org.apache.httpcomponents:httpclient:4.5.3")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile("com.jayway.jsonpath:json-path-assert:2.2.0")
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = "3.1"
+    testCompile("com.jayway.jsonpath:json-path-assert:2.4.0")
 }
 
 processResources {
     outputs.upToDateWhen { false }
-}
-
-jacoco {
-    toolVersion = "0.7.6.201602180812"
-}
-
-jacocoTestReport {
-    group = "Reporting"
-    reports {
-        xml.enabled false
-        csv.enabled false
-        html {
-            enabled true
-            destination "${project.buildDir}/reports/jacoco"
-        }
-    }
 }
 
 bootRun {
@@ -102,11 +85,6 @@ task cleanAndAssemble(dependsOn: ['clean', 'assemble'])
 assemble.mustRunAfter("clean")
 
 test {
-    jacoco {
-        append = false
-        destinationFile = file("${project.buildDir}/jacoco/jacocoTest.exec")
-        classDumpFile = file("${project.buildDir}/jacoco/classpathdumps")
-    }
     testLogging {
         events "passed", "failed", "skipped"
         exceptionFormat "full"
@@ -115,4 +93,17 @@ test {
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-h2")
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
     outputs.upToDateWhen { false }
+}
+
+dependencyUpdates.resolutionStrategy = {
+    componentSelection { rules ->
+        rules.all { ComponentSelection selection ->
+            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
+            }
+            if (rejected) {
+                selection.reject('Release candidate')
+            }
+        }
+    }
 }
