Add config/docs for using a Dockerized UAA
[#153480956] Allow developers to run credhub against a local UAA instance

Signed-off-by: Ben Moss <bmoss@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ processResources {
 
 bootRun {
     addResources = true
-    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev-h2")
+    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev")
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
 }
 
