--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,8 @@ processResources {
 
 bootRun {
     addResources = true
+    systemProperties = System.properties
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev")
-    systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
 }
 
 task cleanAndAssemble(dependsOn: ['clean', 'assemble'])
@@ -90,6 +90,7 @@ test {
         exceptionFormat "full"
     }
 
+    systemProperties = System.properties
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-h2")
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
     outputs.upToDateWhen { false }
