--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,11 +5,12 @@ auth_server:
   trust_store_password: changeit
 
 encryption:
-  provider: internal
   keys:
   - encryption_password: opensesame
+    provider_type: internal
     active: true
   - encryption_password: correcthorsebatterystaple
+    provider_type: internal
   key_creation_enabled: true
   
 security:
