--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.boot:spring-boot-starter-security",
             "org.springframework.boot:spring-boot-starter-data-jpa",
-            "org.springframework.security.oauth:spring-security-oauth2",
-            "org.springframework.security:spring-security-jwt",
+            "org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE",
+            "org.springframework.security:spring-security-jwt:1.0.9.RELEASE",
             "org.springframework.security:spring-security-test"
     ].each{
         compile(it) {
