--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
-        classpath("org.owasp:dependency-check-gradle:3.0.2")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.9.RELEASE")
+        classpath("org.owasp:dependency-check-gradle:3.1.1")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
     }
 }
@@ -44,7 +44,7 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-data-jpa",
             "org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE",
             "org.springframework.security:spring-security-jwt:1.0.9.RELEASE",
-            "org.springframework.security:spring-security-test"
+            "org.springframework.security:spring-security-test:5.0.1.RELEASE"
     ].each{
         compile(it) {
             exclude module: "spring-boot-starter-logging"
@@ -56,15 +56,15 @@ dependencies {
     compile("org.passay:passay:1.3.0")
     compile("com.h2database:h2:1.4.196")
     compile("com.jayway.jsonpath:json-path:2.4.0")
-    compile("org.bouncycastle:bcpkix-jdk15on:1.58")
-    compile("com.google.guava:guava:23.4-jre")
+    compile("org.bouncycastle:bcpkix-jdk15on:1.59")
+    compile("com.google.guava:guava:23.6-jre")
     compile("org.apache.commons:commons-lang3:3.7")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.2")
-    compile("org.postgresql:postgresql:42.1.4")
-    compile("org.mariadb.jdbc:mariadb-java-client:1.5.8")
-    compile("org.flywaydb:flyway-core:4.2.0")
-    compile("net.java.dev.jna:jna:4.5.0")
-    compile("org.apache.httpcomponents:httpclient:4.5.3")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
+    compile("org.postgresql:postgresql:42.2.1")
+    compile("org.mariadb.jdbc:mariadb-java-client:2.2.1")
+    compile("org.flywaydb:flyway-core:5.0.7")
+    compile("net.java.dev.jna:jna:4.5.1")
+    compile("org.apache.httpcomponents:httpclient:4.5.5")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("com.jayway.jsonpath:json-path-assert:2.4.0")
