--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.9.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
         classpath("org.owasp:dependency-check-gradle:3.1.1")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
     }
@@ -37,36 +37,40 @@ repositories {
     jcenter()
 }
 
-dependencies {
-   [
-            "org.springframework.boot:spring-boot-starter-web",
-            "org.springframework.boot:spring-boot-starter-security",
-            "org.springframework.boot:spring-boot-starter-data-jpa",
-            "org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE",
-            "org.springframework.security:spring-security-jwt:1.0.9.RELEASE",
-            "org.springframework.security:spring-security-test:5.0.1.RELEASE"
-    ].each{
-        compile(it) {
-            exclude module: "spring-boot-starter-logging"
-            exclude module: "logback-classic"
-        }
-    }
+configurations.all {
+    exclude module: "spring-boot-starter-logging"
+    exclude module: "logback-classic"
+}
 
+ext['spring-security-oauth.version'] = '2.2.1.RELEASE'
+
+dependencies {
+    // Spring stuff
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-log4j2")
-    compile("org.passay:passay:1.3.0")
+    testCompile("org.springframework.security:spring-security-test")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    compile("org.springframework.security:spring-security-jwt")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
+
+    // DB
+    compile("org.postgresql:postgresql:42.2.1")
+    compile("org.mariadb.jdbc:mariadb-java-client:2.2.1")
+    compile("org.flywaydb:flyway-core:5.0.7")
     compile("com.h2database:h2:1.4.196")
+
+    // Other
+    compile("org.passay:passay:1.3.0")
     compile("com.jayway.jsonpath:json-path:2.4.0")
     compile("org.bouncycastle:bcpkix-jdk15on:1.59")
     compile("com.google.guava:guava:23.6-jre")
     compile("org.apache.commons:commons-lang3:3.7")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
-    compile("org.postgresql:postgresql:42.2.1")
-    compile("org.mariadb.jdbc:mariadb-java-client:2.2.1")
-    compile("org.flywaydb:flyway-core:5.0.7")
     compile("net.java.dev.jna:jna:4.5.1")
     compile("org.apache.httpcomponents:httpclient:4.5.5")
 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("com.jayway.jsonpath:json-path-assert:2.4.0")
 }
 
