Refactor and add external encryption provider support
- Use protobuf to generate grpc objects
- Add support for external key proxy
- Remove reconnect method from the KeySet class
- Nest keys under providers
- Move HSM object fields to generic config object
- Remove LunaConfig Object
- Create a Provider Interface
- Create abstract internal provider class
- Remove provider refernce from keys
- Update application yml files for tests

There were some git rebasing issues, so we squashed this commit
into one giant commit.

[#154539427] CredHub can encrypt and decrypt data with external provider

Signed-off-by: Guillermo Kardolus <gkardolus@pivotal.io>
Signed-off-by: Chhavi Kankaria <ckankaria@pivotal.io>
Signed-off-by: Anna Thornton <athornton@pivotal.io>
Signed-off-by: Edie Beer <ebeer@pivotal.io>
Signed-off-by: Mo Lambo <mlambo@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,12 +5,17 @@ auth_server:
   trust_store_password: changeit
 
 encryption:
-  keys:
-  - encryption_password: opensesame
-    provider_type: internal
-    active: true
-  - encryption_password: correcthorsebatterystaple
-    provider_type: internal
+  providers:
+  - provider_name: ext
+    provider_type: external
+    keys:
+    - encryption_key_name: some-key-name-1
+      active: true
+    - encryption_key_name: correcthorsebatterystaple
+      active: false
+    configuration:
+      host: localhost
+      port: 50051
   key_creation_enabled: true
   
 security:
