WIP updated the log configuration- TODO: log to a file instead of STDOUT in production

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,19 +1,22 @@
 rootLogger.level=info
-appender.FILE.name=CREDHUB
-appender.FILE.type=File
-appender.FILE.fileName=/dev/stdout
-appender.FILE.layout.type=PatternLayout
-appender.FILE.layout.pattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} [%t] .... %5p --- %c{1}: %m%n
-appender.SECURITY_EVENTS_FILE.name=CREDHUB_SECURITY_EVENTS
-appender.SECURITY_EVENTS_FILE.type=File
-appender.SECURITY_EVENTS_FILE.fileName=/dev/stdout
-appender.SECURITY_EVENTS_FILE.layout.type=PatternLayout
-appender.SECURITY_EVENTS_FILE.layout.pattern=%m%n
-rootLogger.appenderRef.FILE.ref=CREDHUB
-logger.SECURITY_EVENTS_FILE.name=CREDHUB_SECURITY_EVENTS
-logger.SECURITY_EVENTS_FILE.appenderRefs=SECURITY_EVENTS_FILE
-logger.SECURITY_EVENTS_FILE.appenderRef.SECURITY_EVENTS_FILE.ref=CREDHUB_SECURITY_EVENTS
-logger.SECURITY_EVENTS_FILE.level=debug
+
+appender.console.name=STDOUT
+appender.console.type=Console
+appender.console.target=SYSTEM_OUT
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+rootLogger.appenderRef.stdout.ref = STDOUT
+
+appender.audit.name=Audit
+appender.audit.type=Console
+appender.audit.target=SYSTEM_OUT
+appender.audit.layout.type=PatternLayout
+appender.audit.layout.pattern=%msg%n
+
+logger.audit.name=CEFAudit
+logger.audit.appenderRef.foo.ref=Audit
+
 # turn off logging for files that leak sensitive data
 logger.EntityPrinter.name=org.hibernate.internal.util.EntityPrinter
 logger.EntityPrinter.level=OFF
