Revert "Merge pull request #35 from cloudfoundry-incubator/audit_refactor"
This reverts commit 492cb619fd322245e7756ffd72154ea4e1526d4a, reversing
changes made to 6ff7a9cd10e1e0ce93a5b94251297d919dac125c.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,10 +1,33 @@
 rootLogger.level=info
-
-appender.console.name=STDOUT
-appender.console.type=Console
-appender.console.target=SYSTEM_OUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
-
-rootLogger.appenderRef.stdout.ref = STDOUT
-
+appender.FILE.name=CREDHUB
+appender.FILE.type=File
+appender.FILE.fileName=/dev/stdout
+appender.FILE.layout.type=PatternLayout
+appender.FILE.layout.pattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} [%t] .... %5p --- %c{1}: %m%n
+appender.SECURITY_EVENTS_FILE.name=CREDHUB_SECURITY_EVENTS
+appender.SECURITY_EVENTS_FILE.type=File
+appender.SECURITY_EVENTS_FILE.fileName=/dev/stdout
+appender.SECURITY_EVENTS_FILE.layout.type=PatternLayout
+appender.SECURITY_EVENTS_FILE.layout.pattern=%m%n
+rootLogger.appenderRef.FILE.ref=CREDHUB
+logger.SECURITY_EVENTS_FILE.name=CREDHUB_SECURITY_EVENTS
+logger.SECURITY_EVENTS_FILE.appenderRefs=SECURITY_EVENTS_FILE
+logger.SECURITY_EVENTS_FILE.appenderRef.SECURITY_EVENTS_FILE.ref=CREDHUB_SECURITY_EVENTS
+logger.SECURITY_EVENTS_FILE.level=debug
+# turn off logging for files that leak sensitive data
+logger.EntityPrinter.name=org.hibernate.internal.util.EntityPrinter
+logger.EntityPrinter.level=OFF
+logger.DefaultOAuth2ExceptionRenderer.name=org.springframework.security.oauth2.provider.error.DefaultOAuth2ExceptionRenderer
+logger.DefaultOAuth2ExceptionRenderer.level=OFF
+logger.Http11InputBuffer.name=org.apache.coyote.http11.Http11InputBuffer
+logger.Http11InputBuffer.level=OFF
+logger.OAuth2AuthenticationProcessingFilter.name=org.springframework.security.oauth2.provider.authentication.OAuth2AuthenticationProcessingFilter
+logger.OAuth2AuthenticationProcessingFilter.level=OFF
+logger.PropertySourcesPropertyResolver.name=org.springframework.core.env.PropertySourcesPropertyResolver
+logger.PropertySourcesPropertyResolver.level=OFF
+logger.DbSupportFactory.name=org.flywaydb.core.internal.dbsupport.DbSupportFactory
+logger.DbSupportFactory.level=OFF
+logger.SessionFactoryImpl.name=org.hibernate.internal.SessionFactoryImpl
+logger.SessionFactoryImpl.level=OFF
+logger.HibernateLogHelper.name=org.hibernate.jpa.internal.util.LogHelper
+logger.HibernateLogHelper.level=OFF
