Increase size of credential names
- Add checksum to enforce uniqueness since name is too long for unique
constraints in MySQL now

Signed-off-by: Mo Lambo <mlambo@pivotal.io>
Signed-off-by: Chhavi Kankaria <ckankaria@pivotal.io>

--- a/src/test/resources/application-unit-test-postgres.yml
+++ b/src/test/resources/application-unit-test-postgres.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    username: root
+    username:
     password: root
-    url: jdbc:postgresql://localhost:5432/credhub_test?user=root
+    url: jdbc:postgresql://localhost:5432/credhub_test
 
 flyway:
   locations: classpath:/db/migration/common,classpath:/db/migration/postgres
