--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile("org.bouncycastle:bcpkix-jdk15on:1.59")
     compile("com.google.guava:guava:23.6-jre")
     compile("org.apache.commons:commons-lang3:3.7")
+    compile("org.apache.commons:commons-io:1.3.2")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
     compile("net.java.dev.jna:jna:4.5.1")
     compile("org.apache.httpcomponents:httpclient:4.5.5")
