--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.14.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
         classpath("org.owasp:dependency-check-gradle:3.1.1")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
         classpath("com.google.protobuf:protobuf-gradle-plugin:0.8.3")
@@ -20,6 +20,7 @@ plugins {
 apply plugin: "java"
 apply plugin: "idea"
 apply plugin: "org.springframework.boot"
+apply plugin: 'io.spring.dependency-management'
 apply plugin: "org.owasp.dependencycheck"
 apply plugin: "com.google.protobuf"
 
@@ -43,8 +44,6 @@ configurations.all {
     exclude module: "logback-classic"
 }
 
-ext['spring-security-oauth.version'] = '2.2.2.RELEASE'
-
 def grpcVersion = '1.12.0'
 def nettyTcNativeVersion = '2.0.7.Final'
 
@@ -56,8 +55,10 @@ dependencies {
     testCompile("org.springframework.security:spring-security-test")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
-    compile("org.springframework.security:spring-security-jwt")
-    compile("org.springframework.security.oauth:spring-security-oauth2")
+    compile('org.springframework.security:spring-security-web')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.1.RELEASE')
+    compile('org.springframework.security.oauth:spring-security-oauth2:2.2.2.RELEASE')
 
     // DB
     compile("org.postgresql:postgresql:42.2.1")
@@ -92,7 +93,7 @@ processResources {
 }
 
 bootRun {
-    addResources = true
+    sourceResources sourceSets.main
     systemProperties = System.properties
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev, dev-h2")
 }
