--- a/src/test/resources/application-unit-test-h2.yml
+++ b/src/test/resources/application-unit-test-h2.yml
@@ -1,2 +1,3 @@
-flyway:
-  locations: classpath:/db/migration/common,classpath:/db/migration/h2
+spring:
+  flyway:
+    locations: classpath:/db/migration/common,classpath:/db/migration/h2
