Enable ACLs in dev server script
* Give the credhub_client user all permissions (used by acceptance
tests)

[#157596194] Operators can add permissions to credentials that do not yet exist using properties in the manifest

Signed-off-by: Mark DeLillo <mdelillo@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,12 +15,15 @@ encryption:
       active: true
     - encryption_password: correcthorsebatterystaple
       provider_type: internal
-  
+
 security:
   authorization:
     acls:
-      # Change to true to enable ACL enforcement
-      enabled: false
+      enabled: true
+    permissions:
+    - path: /*
+      actors: ["uaa-client:credhub_client"]
+      operations: [read,write,delete,read_acl,write_acl]
 
 logging:
   config: src/main/resources/log4j2.properties
