--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.4.RELEASE")
         classpath("org.owasp:dependency-check-gradle:3.1.1")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
-        classpath("com.google.protobuf:protobuf-gradle-plugin:0.8.3")
+        classpath("com.google.protobuf:protobuf-gradle-plugin:0.8.6")
     }
 }
 
@@ -43,8 +43,9 @@ configurations.all {
     exclude module: "logback-classic"
 }
 
-def grpcVersion = '1.12.0'
-def nettyTcNativeVersion = '2.0.7.Final'
+// https://github.com/grpc/grpc-java/blob/master/SECURITY.md#netty
+def grpcVersion = '1.14.0'
+def nettyTcNativeVersion = '2.0.12.Final'
 dependencies {
     // Spring stuff
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -76,7 +77,7 @@ dependencies {
     compile("org.apache.httpcomponents:httpclient:4.5.5")
 
     //gRPC
-    compile "com.google.api.grpc:proto-google-common-protos:1.0.0"
+    compile "com.google.api.grpc:proto-google-common-protos:1.12.0"
     compile "io.grpc:grpc-services:${grpcVersion}"
 
     //gRPC - Netty
@@ -138,7 +139,7 @@ sourceSets {
 }
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.5.1-1"
+        artifact = "com.google.protobuf:protoc:3.6.1"
     }
     plugins {
         grpc {
