Use unix socket to connect with external encryption provider
- Update provider type to include kms-plugin instead of external

[#160484641]

Signed-off-by: Mark DeLillo <mdelillo@pivotal.io>
Signed-off-by: Anna Thornton <athornton@pivotal.io>
Signed-off-by: Victoria Henry <vhenry@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ configurations.all {
 
 // https://github.com/grpc/grpc-java/blob/master/SECURITY.md#netty
 def grpcVersion = '1.14.0'
-def nettyTcNativeVersion = '2.0.13.Final'
+def nettyVersion = '4.1.29.Final'
 dependencies {
     // Spring stuff
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -82,7 +82,10 @@ dependencies {
 
     //gRPC - Netty
     compile "io.grpc:grpc-netty:${grpcVersion}"
-    compile "io.netty:netty-tcnative-boringssl-static:${nettyTcNativeVersion}"
+
+    //Netty
+    compile "io.netty:netty-transport-native-unix-common:${nettyVersion}"
+    compile "io.netty:netty-all:${nettyVersion}"
 
     testCompile("com.jayway.jsonpath:json-path-assert:2.4.0")
 }
