Adds updateVersionFile task
[#160565578]

Signed-off-by: Victoria Henry <vhenry@pivotal.io>
Signed-off-by: Mark DeLillo <mdelillo@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,12 @@ processResources {
     outputs.upToDateWhen { false }
 }
 
+task updateVersionFile(type: Exec) {
+    commandLine './fetch-version.sh'
+}
+
 bootRun {
+    dependsOn updateVersionFile
     sourceResources sourceSets.main
     systemProperties = System.properties
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev, dev-h2")
