Returns a 400 for a malformed certificate
- Also refactor CertificateReader to fail early when given a malformed
certificate

[#155030791]

Signed-off-by: Walter Scarborough <wscarborough@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     compile "io.netty:netty-transport-native-unix-common:${nettyVersion}"
     compile "io.netty:netty-all:${nettyVersion}"
 
+    testCompile("org.skyscreamer:jsonassert:1.5.0")
     testCompile("com.jayway.jsonpath:json-path-assert:2.4.0")
 }
 
