--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 buildscript {
+    ext {
+        springBootVersion = '2.0.6.RELEASE'
+        grpcVersion = '1.14.0'
+        jsonPathVersion = '2.4.0'
+
+        // https://github.com/grpc/grpc-java/blob/master/SECURITY.md#netty
+        nettyVersion = '4.1.29.Final'
+    }
     repositories {
         mavenCentral()
         maven { url("http://repo.spring.io/plugins-release") }
         maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.6.RELEASE") // Spring Boot Version
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
         classpath("org.owasp:dependency-check-gradle:3.1.1")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
         classpath("com.google.protobuf:protobuf-gradle-plugin:0.8.6")
@@ -43,52 +51,54 @@ configurations.all {
     exclude module: "logback-classic"
 }
 
-// https://github.com/grpc/grpc-java/blob/master/SECURITY.md#netty
-def grpcVersion = '1.14.0'
-def nettyVersion = '4.1.29.Final'
 dependencies {
     // Spring stuff
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.boot:spring-boot-starter-log4j2")
-    testCompile("org.springframework.security:spring-security-test")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
-
-    compile("org.springframework.security:spring-security-web")
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.5.RELEASE')
-    compile('org.springframework.security.oauth:spring-security-oauth2:2.3.3.RELEASE')
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-log4j2")
+    implementation("org.springframework.security:spring-security-web")
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.5.RELEASE')
+    implementation('org.springframework.security.oauth:spring-security-oauth2:2.3.3.RELEASE')
+    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
 
     // DB
-    compile("org.postgresql:postgresql:42.2.1")
-    compile("org.mariadb.jdbc:mariadb-java-client:2.2.1")
-    compile("org.flywaydb:flyway-core:5.0.7")
-    compile("com.h2database:h2:1.4.196")
+    implementation("org.postgresql:postgresql")
+    implementation("org.mariadb.jdbc:mariadb-java-client")
+    implementation("org.flywaydb:flyway-core")
+    implementation("com.h2database:h2")
 
     // Other
-    compile("org.passay:passay:1.3.0")
-    compile("com.jayway.jsonpath:json-path:2.4.0")
-    compile("org.bouncycastle:bcpkix-jdk15on:1.60")
-    compile("com.google.guava:guava:23.6-jre")
-    compile("org.apache.commons:commons-lang3:3.7")
-    compile("org.apache.commons:commons-io:1.3.2")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.6")
-    compile("net.java.dev.jna:jna:4.5.1")
-    compile("org.apache.httpcomponents:httpclient:4.5.5")
+    implementation("org.passay:passay:1.3.0")
+    implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
+    implementation("org.bouncycastle:bcpkix-jdk15on:1.60")
+    implementation("com.google.guava:guava:23.6-jre")
+    implementation("org.apache.commons:commons-lang3:3.7")
+    implementation("org.apache.commons:commons-io:1.3.2")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+    implementation("net.java.dev.jna:jna:4.5.1")
+    implementation("org.apache.httpcomponents:httpclient:4.5.5")
 
     //gRPC
-    compile "com.google.api.grpc:proto-google-common-protos:1.12.0"
-    compile "io.grpc:grpc-services:${grpcVersion}"
+    implementation "com.google.api.grpc:proto-google-common-protos:1.12.0"
+    implementation "io.grpc:grpc-services:${grpcVersion}"
 
     //gRPC - Netty
-    compile "io.grpc:grpc-netty:${grpcVersion}"
+    implementation "io.grpc:grpc-netty:${grpcVersion}"
 
     //Netty
-    compile "io.netty:netty-transport-native-unix-common:${nettyVersion}"
-    compile "io.netty:netty-all:${nettyVersion}"
+    implementation "io.netty:netty-transport-native-unix-common:${nettyVersion}"
+    implementation "io.netty:netty-all:${nettyVersion}"
 
-    testCompile("org.skyscreamer:jsonassert:1.5.0")
-    testCompile("com.jayway.jsonpath:json-path-assert:2.4.0")
+    testImplementation("org.skyscreamer:jsonassert:1.5.0")
+    testImplementation("com.jayway.jsonpath:json-path-assert:${jsonPathVersion}")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    }
 }
 
 processResources {
