Pin postgres version to 42.2.4
* Version 42.2.5 made a breaking change to the behavior of ssl=true in the connection string (https://jdbc.postgresql.org/documentation/changelog.html#version_42.2.5)

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 
     // DB
-    implementation("org.postgresql:postgresql")
+    implementation("org.postgresql:postgresql:42.2.4")
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation("org.flywaydb:flyway-core")
     implementation("com.h2database:h2")
