--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ apply from: "spring-cloud-contract-config.gradle"
 apply from: "spring-rest-docs-config.gradle"
 apply from: "ktlint.gradle"
 apply from: "checkstyle-config.gradle"
+apply from: "pmd-config.gradle"
 apply from: "test-parallel.gradle"
 
 spotbugs {
