Add Spring Boot Actuator for non-tls (http) health endpoint
- Moved non-production settings out of application.yml and into
application-dev.yml so that the new health endpoint is ready to use by
default.

[#158726819]

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,6 +17,9 @@ encryption:
       provider_type: internal
 
 security:
+  oauth2:
+    resource:
+      id: credhub
   authorization:
     acls:
       enabled: true
@@ -48,3 +51,6 @@ server:
 spring:
   profiles:
     include: dev-remote-uaa
+  jpa:
+    hibernate:
+      ddl-auto: validate
