Generate version file before processing resources.
If we don't do this, then the version file does not get compiled
into credhub.jar :(

Signed-off-by: Marty Spiewak <mspiewak@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -158,6 +158,8 @@ task updateVersionFile(type: Exec) {
     commandLine './scripts/fetch-version.sh'
 }
 
+processResources.dependsOn updateVersionFile
+
 bootRun {
     dependsOn updateVersionFile
     sourceResources sourceSets.main
