Restore FIPS bouncycastle
[#163603674]

Signed-off-by: Walter Scarborough <wscarborough@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ gradle-app.setting
 
 applications/credhub-api/src/main/resources/version
 applications/credhub-api/src/main/resources/application-dev-external-provider.yml
+libs/
