--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -69,7 +69,8 @@ dependencies {
     implementation("org.flywaydb:flyway-core")
     implementation("com.h2database:h2")
 
-    implementation("org.bouncycastle:bcpkix-jdk15on:${bouncyCastleVersion}")
+    compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
+    compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
 
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
