--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         apacheCommonsIoVersion = '1.3.2'
         apacheHttpClientVersion = '4.5.5'
         asciiDoctorPluginVersion = '1.5.3'
-        bouncyCastleVersion = '1.60'
+        bcpkixFipsVersion = '1.0.2'
+        bcFipsVersion = '1.0.1'
         guavaVersion = '23.6-jre'
-        jnaVersion = '4.5.1'
         jsonPathVersion = '2.4.0'
         kotlinVersion = '1.2.71'
         passayVersion = '1.3.0'
@@ -38,6 +38,7 @@ plugins {
 
 apply plugin: DependenciesGraphPlugin
 apply plugin: "org.owasp.dependencycheck"
+apply from: "download-bouncy-castle-fips.gradle"
 
 dependencyUpdates.resolutionStrategy = {
     componentSelection { rules ->
