--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -55,10 +55,10 @@ dependencies {
 
     // Other
     implementation("org.passay:passay:${passayVersion}")
-    implementation("org.bouncycastle:bcpkix-jdk15on:${bouncyCastleVersion}")
+    compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
+    compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
-    implementation("net.java.dev.jna:jna:${jnaVersion}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
 }
 
