--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -58,10 +58,10 @@ dependencies {
 
     // Other
     implementation("org.passay:passay:${passayVersion}")
-    implementation("org.bouncycastle:bcpkix-jdk15on:${bouncyCastleVersion}")
+    compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
+    compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
-    implementation("net.java.dev.jna:jna:${jnaVersion}")
 
     //gRPC
     implementation "com.google.api.grpc:proto-google-common-protos:1.12.0"
