Refactor dynamic error messages into compile time constants
[#164944836]

Signed-off-by: Walter Scarborough <wscarborough@pivotal.io>

--- a/components/generate/build.gradle
+++ b/components/generate/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation project(":components:audit")
     implementation project(":components:credentials")
+    implementation project(":components:errors")
     implementation project(":components:permissions")
     implementation project(":components:string-utilities")
 
