update build.gradle to put docs into jar
- also reorganize the docs template
- also renamed some test doubles for consistency

[#164698753]

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -99,3 +99,10 @@ test {
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
     outputs.upToDateWhen { false }
 }
+
+jar {
+    dependsOn asciidoctor
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
+}
