Autodocs: bundle doc build artifact into credhub api server at /docs/index.html
[#164698753]

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+applications/credhub-api/src/main/resources/static/
+
 # Created by https://www.gitignore.io/api/osx,eclipse,intellij,gradle,maven
 
 ### OSX ###
