add fix for 100k cert issue
 [#164606516]

Co-authored-by: Marty Spiewak <mspiewak@pivotal.io>
Co-authored-by: Tom Kennedy <tkennedy@pivotal.io>
Co-authored-by: Mark Delillo <mdelillo@pivotal.io>
Co-authored-by: Andrew Keesler <akeesler@pivotal.io>

--- a/applications/credhub-api/src/main/resources/application-dev.yml
+++ b/applications/credhub-api/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ encryption:
   - provider_name: internal
     provider_type: internal
     keys:
-    - encryption_password: opensesame
+    - encryption_password: somehardcodedencryptionpassword
       provider_type: internal
       active: true
     - encryption_password: correcthorsebatterystaple
